--- a/frontend/src/style/login.css
+++ b/frontend/src/style/login.css
@@ -34,34 +34,34 @@
 
 .shape {
   position: absolute;
-  border-radius: 50%;
-  background: linear-gradient(45deg, var(--primary-color), #ff6b35);
+  color: var(--primary-color);
   opacity: 0.1;
   animation: float 6s ease-in-out infinite;
+  font-size: 72px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .shape-1 {
-  width: 300px;
-  height: 300px;
   top: 10%;
   left: 10%;
   animation-delay: 0s;
+  font-size: 96px;
 }
 
 .shape-2 {
-  width: 200px;
-  height: 200px;
   top: 60%;
   right: 15%;
   animation-delay: 2s;
+  font-size: 80px;
 }
 
 .shape-3 {
-  width: 150px;
-  height: 150px;
   bottom: 20%;
   left: 20%;
   animation-delay: 4s;
+  font-size: 88px;
 }
 
 @keyframes float {
