--- a/frontend/src/style/navbar.css
+++ b/frontend/src/style/navbar.css
@@ -44,6 +44,14 @@
 
 .nav-link {
   color: #fff !important;
+  outline: none !important;
+  border: none !important;
+}
+
+.nav-link:focus {
+  outline: none !important;
+  border: none !important;
+  box-shadow: none !important;
 }
 
 nav .order-2 .nav-link {
@@ -67,6 +75,29 @@ nav .order-2 .nav-link {
   background-color: #9e9e9e;
 }
 
+/* Position dropdown arrow to the left of profile image */
+.navbar .dropdown-toggle::after {
+  display: inline-block;
+  margin-left: 0.255em;
+  vertical-align: 0.255em;
+  content: "";
+  border-top: 0.3em solid;
+  border-right: 0.3em solid transparent;
+  border-bottom: 0;
+  border-left: 0.3em solid transparent;
+  position: absolute;
+  left: -12px;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.navbar .dropdown-toggle {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .navbar-collapse > div {
   width: 100%;
   display: flex;
@@ -80,6 +111,29 @@ nav .order-2 .nav-link {
   width: fit-content;
   border: 2px solid var(--primary-color);
   border-radius: 15px 15px;
+  outline: none !important;
+  background-color: var(--primary-color);
+  color: #000 !important;
+  font-weight: 600;
+  padding: 8px 20px;
+}
+
+.navbar .btn:focus {
+  outline: none !important;
+  box-shadow: none !important;
+}
+
+/* Make navbar profile image circular */
+.navbar img {
+  border-radius: 50%;
+  object-fit: cover;
+}
+
+.navbar .dropdown-toggle img {
+  border-radius: 50%;
+  object-fit: cover;
+  width: 40px;
+  height: 40px;
 }
 
 .navbar .navbar-login-btn {
@@ -88,6 +142,12 @@ nav .order-2 .nav-link {
   border: 2px solid #fff;
   color: #000;
   border-radius: 15px 15px;
+  outline: none !important;
+}
+
+.navbar .navbar-login-btn:focus {
+  outline: none !important;
+  box-shadow: none !important;
 }
 
 .navbar .btn:hover {
@@ -189,6 +249,21 @@ nav .order-2 .nav-link {
   
   .nav-links-underlined .nav-link.active::after {
     width: fit-content;
+  }
+
+  /* Position dropdown arrow to the left of profile image on mobile */
+  .navbar .dropdown-toggle::after {
+    left: -12px;
+    top: 50%;
+    transform: translateY(-50%);
+  }
+
+  /* Position profile image near the arrow in hamburger menu */
+  .navbar .dropdown-toggle {
+    justify-content: flex-start;
+    width: 100%;
+    text-align: left;
+    padding-left: 20px;
   }
 }
 
