--- a/frontend/src/style/register.css
+++ b/frontend/src/style/register.css
@@ -56,6 +56,7 @@
   overflow: hidden;
 }
 
+
 .image-upload-placeholder:hover {
   border-color: #fff300;
 }
@@ -200,10 +201,14 @@ p .lgn-btn {
 .submit-btn-container {
   max-width: 300px;
   width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .submit-btn-container .submit-btn {
   width: 100%;
+  
 }
 
 @media (max-width: 991.98px) {
